--- a/2-jQuery/PSS-APP/index.html
+++ b/2-jQuery/PSS-APP/index.html
@@ -19,22 +19,22 @@
             <form id="search-query">
                 <div>
                     <label>From</label>
-                    <input type="text" id="origin"/>
+                    <input type="text" id="origin" value="Delhi"/>
                 </div>
 
                 <div>
                     <label>To</label>
-                    <input type="text" id="destination"/>
+                    <input type="text" id="destination"  value="Chennai"/>
                 </div>
 
                 <div>
                     <label>Date</label>
-                    <input type="text" id="flightDate"/>
+                    <input type="text" id="flightDate" value="2021-05-26" />
                 </div>
 
                 <div>
                     <label>Travellers</label>
-                    <input type="text" id="travellers"/>
+                    <input type="text" id="travellers" value="2" />
                 </div>
 
                 <div>
@@ -48,10 +48,12 @@
     </div>
 
     <div id="search-results">
-
-
-
     </div>
+
+    <div id="booking-form">
+    </div>
+
+
 
 
 
